Added line markers for color field access